fix popup sizes on mobile devices

--- a/less/blocks/btn.less
+++ b/less/blocks/btn.less
@@ -262,6 +262,24 @@
   }
 }
 
+@media (max-width: 760px) {
+  .btn {
+    &_form {
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+  }
+}
+
+@media (max-width: 667px) {
+  .btn {
+    &_form {
+      padding-top: 12px;
+      padding-bottom: 12px;
+    }
+  }
+}
+
 @media (max-width: 675px) {
   .btn {
     width: 100%;
