--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -88,6 +88,118 @@ input:-ms-input-placeholder {
     line-height: 40px;
   }
 }
+
+@media (max-width: 760px) {
+  .form__input {
+    margin-bottom: 25px;
+    font-size: 18px;
+    line-height: 30px;
+  }
+  input::-webkit-input-placeholder {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  input::-moz-placeholder {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  input:-moz-placeholder {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  input:-ms-input-placeholder {
+    font-size: 18px;
+    line-height: 30px;
+  }
+  .form__checkbox-wrapper {
+    margin-bottom: 20px;
+  }
+  .form__label {
+    padding-top: 10px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 667px) {
+  .form__input {
+    margin-bottom: 22px;
+    font-size: 16px;
+  }
+  input::-webkit-input-placeholder {
+    font-size: 16px;
+  }
+  input::-moz-placeholder {
+    font-size: 16px;
+  }
+  input:-moz-placeholder {
+    font-size: 16px;
+  }
+  input:-ms-input-placeholder {
+    font-size: 16px;
+  }
+  .form__checkbox-wrapper {
+    margin-bottom: 15px;
+  }
+  .form__label {
+    padding-top: 11px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 640px) {
+  .form__input {
+    margin-bottom: 20px;
+    font-size: 14px;
+  }
+  input::-webkit-input-placeholder {
+    font-size: 14px;
+  }
+  input::-moz-placeholder {
+    font-size: 14px;
+  }
+  input:-moz-placeholder {
+    font-size: 14px;
+  }
+  input:-ms-input-placeholder {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 568px) {
+  .form__input {
+    margin-bottom: 8px;
+    font-size: 12px;
+    line-height: 25px;
+  }
+  input::-webkit-input-placeholder {
+    font-size: 12px;
+    line-height: 25px;
+  }
+  input::-moz-placeholder {
+    font-size: 12px;
+    line-height: 25px;
+  }
+  input:-moz-placeholder {
+    font-size: 12px;
+    line-height: 25px;
+  }
+  input:-ms-input-placeholder {
+    font-size: 12px;
+    line-height: 25px;
+  }
+  .form__label {
+    font-size: 12px;
+    &::before {
+      width: 25px;
+      height: 25px;
+    }
+    &::after {
+      width: 25px;
+      height: 25px;
+    }
+  }
+}
+
 @media (max-width: 414px) {
   .form__input {
     margin-bottom: 15px;
