--- a/less/blocks/popup.less
+++ b/less/blocks/popup.less
@@ -71,21 +71,69 @@
 @media (max-width: 900px) {
   .popup {
     width: 80%;
+    max-height: 90%;
   }
 }
+
+@media (max-width: 760px) {
+  .popup {
+    padding-top: 35px;
+  }
+  .popup__title {
+    font-size: 25px;
+    line-height: 28px;
+  }
+  .popup__text {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media (max-width: 667px) {
+  .popup {
+    padding-top: 15px;
+  }
+  .popup__title {
+    font-size: 23px;
+    line-height: 25px;
+  }
+  .popup__text {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+
+@media (max-width: 568px) {
+  .popup__title {
+    font-size: 21px;
+    line-height: 23px;
+  }
+  .popup__text {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .popup {
+    padding-left: 7%;
+    padding-right: 7%;
+  }
+  .popup__text {
+    font-size: 10px;
+  }
+}
+
 
 @media (max-width: 414px) {
   .popup {
     width: 85%;
-    margin-top: 40px;
-    margin-bottom: 31px;
     padding-left: 5%;
     padding-right: 5%;
-    height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
   }
   .popup__text {
-    font-size: 16px;
+    font-size: 14px;
   }
 }
